# mooncake

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
example/: .gitignore  README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
ios/: mooncake.podspec
ios/Classes/: MooncakePlugin.swift
lib/: mooncake.dart
lib/src/: grid_builder.dart  mooncake_method_channel.dart  mooncake_platform_interface.dart  mooncake_plugin.dart  mooncake_view.dart  table_selector_desktop.dart  table_selector_mobile.dart  view_mooncake.dart
linux/: CMakeLists.txt  mooncake_plugin.cc  my_application.cc
linux/flutter/: CMakeLists.txt
linux/runner/: my_application.cc
linux/src/: mooncake_plugin.cc
linux/test/: mooncake_plugin_test.cc
macos/: mooncake.podspec
macos/Classes/: MooncakePlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
mooncake_plugin/: .gitignore  pubspec.yaml
mooncake_plugin/example/: pubspec.yaml
mooncake_plugin/lib/: mooncake_method_channel.dart  mooncake_platform_interface.dart  mooncake_plugin.dart
mooncake_plugin/linux/: CMakeLists.txt  mooncake_plugin_private.h
mooncake_plugin/macos/: mooncake.podspec
mooncake_plugin/windows/: CMakeLists.txt  mooncake_plugin.cpp  (+2 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+48 files in other folders)
